# rudolf

./: Cargo.toml  LICENSE  README.md
benches/: kalman_3d.rs  kalman_f32s3o3.rs
examples/: alphabeta.rs  kalman.rs
examples/utils/: utils.rs
src/: base.rs  core.rs  lib.rs  main.rs
src/filters/: alphabeta.rs  kalman.rs  mod.rs  ukalman.rs
src/generators/: mod.rs  sigma_points.rs
