[package]
name = "rudolf"
version = "0.1.0"
authors = ["Omar Abdeldayem <omar.abdeldayem@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.2"
num = "0.3"
criterion = "0.3"

[[bench]]
name = "kalman_3d"
harness = false
