[package]
name = "rudolf"
version = "0.1.0"
authors = ["Omar Abdeldayem <omar.abdeldayem@outlook.com>"]
edition = "2021"


[dependencies]
nalgebra = "0.26.2"
num = "0.3"
criterion = "0.3"

[dev-dependencies]
plotters = "0.3.1"
rand = "0.8.3"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"

[[bench]]
name = "kalman_f32s3o3"
harness = false
