[package]
name = "rudolf"
version = "0.0.1"
authors = ["Omar Abdeldayem <o.a.abdeldayem@gmail.com>"]
edition = "2021"
description = "Filters for embedded devices"
readme = "README.md"
license-file = "LICENSE"
keywords = ["kalman", "filter", "embedded"]
categoris = ["science::robotics", "embedded"]
repository = "https://github.com/omarabdeldayem/rudolf/"


[dependencies]
nalgebra = "0.26.2"
num = "0.3"
criterion = "0.3"

[dev-dependencies]
plotters = "0.3.1"
rand = "0.8.3"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"

[[bench]]
name = "kalman_f32s3o3"
harness = false
